--- a/SAO-EP/Src/New APF Form Screen.fx.yaml
+++ b/SAO-EP/Src/New APF Form Screen.fx.yaml
@@ -1695,9 +1695,18 @@
             LayoutMinWidth: =96
             OnSelect: |-
                 =SubmitForm(NewAPF_Form);
+                Set(isSelectingUpload, true);
                 Set(NewAPF_ID,NewAPF_Form.LastSubmit);
+                Set(
+                    advEmail,
+                    LookUp(
+                        Filter(Users, CurrentUserOrg.ID = userOrg.Id),
+                        userRoles.Id = 2,
+                        userEmail
+                    )
+                );
                 
-                
+                Set(flowOutput, newAPFApprovalFlow.Run(NewAPF_ID.ID, NewAPF_ID.'Activity Title', CurrentUser.userEmail, advEmail))
                 
                 //ResetForm(NewAPF_Form);
             Text: ="Submit"
@@ -1713,4 +1722,69 @@
         X: =2
         Y: =718
         ZIndex: =4
+
+    SelectUpload_1 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =13
+
+        Rectangle6_11 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =768
+            Visible: =isSelectingUpload
+            Width: =1366
+            ZIndex: =5
+
+        Rectangle6_12 As rectangle:
+            Fill: =RGBA(24, 32, 82, 1)
+            Height: =364
+            Visible: =isSelectingUpload
+            Width: =825
+            X: =275
+            Y: =204
+            ZIndex: =6
+
+        Label2_6 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Font: =Font.'Lato Black'
+            Height: =73
+            Size: =30
+            Text: ="Please wait."
+            Visible: =isSelectingUpload
+            Width: =632
+            X: =369
+            Y: =335
+            ZIndex: =7
+
+        TextCanvas3_2 As Text:
+            Align: ='TextCanvas.Align'.Center
+            DisplayMode: =DisplayMode.Edit
+            FontColor: =RGBA(255, 255, 255, 1)
+            Height: =27
+            Size: =18
+            Text: ="New APF"
+            Visible: =flowOutput.responsemsg
+            Width: =102
+            X: =634
+            Y: =408
+            ZIndex: =10
+
+        ButtonCanvas4_1 As Button:
+            BorderRadiusBottomLeft: =100
+            BorderRadiusBottomRight: =100
+            BorderRadiusTopLeft: =100
+            BorderRadiusTopRight: =100
+            DisplayMode: =DisplayMode.Edit
+            Height: =34
+            Icon: ="Dismiss"
+            OnSelect: =Set(isSelectingUpload, false)
+            Text: =
+            Visible: =isSelectingUpload
+            Width: =33
+            X: =1037
+            Y: =232
+            ZIndex: =12
 
