--- a/SAO-EP/Src/New APF Form Screen.fx.yaml
+++ b/SAO-EP/Src/New APF Form Screen.fx.yaml
@@ -1765,7 +1765,7 @@
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =27
             Size: =18
-            Text: ="New APF"
+            Text: =flowOutput.responsemsg
             Visible: =flowOutput.responsemsg
             Width: =102
             X: =634
