--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1049,6 +1049,256 @@
                     Visible: =openExportFilters
                     ZIndex: =4
 
+                    Gallery1 As gallery.galleryVertical:
+                        DelayItemLoading: =true
+                        Height: =267
+                        Items: =Organizations
+                        Layout: =Layout.Vertical
+                        LoadingSpinner: =LoadingSpinner.Data
+                        TemplateSize: =31
+                        Width: =214
+                        X: =48
+                        Y: =165
+                        ZIndex: =1
+
+                        CheckboxCanvas3 As Checkbox:
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: =ThisItem.orgAcronym
+                            OnCheck: =false
+                            OnSelect: =Select(Parent)
+                            OnUncheck: =false
+                            Width: =160
+                            X: =20
+                            Y: =20
+                            ZIndex: =1
+
+                    TextCanvas10 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =80
+                        Size: =30
+                        Text: ="Export Preview"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =361
+                        X: =48
+                        Y: =46
+                        ZIndex: =5
+
+                    DataTable3 As dataTable.datatable:
+                        BorderStyle: =BorderStyle.Solid
+                        DisplayMode: =DisplayMode.Edit
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =254
+                        Items: =
+                        Width: =876
+                        X: =0
+                        Y: =474
+                        ZIndex: =6
+
+                    TextCanvas10_1 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =54
+                        Size: =20
+                        Text: |-
+                            ="Organization:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =148
+                        X: =48
+                        Y: =126
+                        ZIndex: =15
+
+                    TextCanvas10_2 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =54
+                        Size: =20
+                        Text: |-
+                            ="Information: "
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =148
+                        X: =248
+                        Y: =126
+                        ZIndex: =16
+
+                    CheckboxCanvas4 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =194
+                        ZIndex: =17
+
+                    CheckboxCanvas4_1 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =226
+                        ZIndex: =18
+
+                    CheckboxCanvas4_2 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =258
+                        ZIndex: =19
+
+                    CheckboxCanvas4_3 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =290
+                        ZIndex: =20
+
+                    CheckboxCanvas4_4 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =323
+                        ZIndex: =21
+
+                    CheckboxCanvas4_5 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =249
+                        Y: =355
+                        ZIndex: =22
+
+                    CheckboxCanvas4_6 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =194
+                        ZIndex: =23
+
+                    CheckboxCanvas4_7 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =226
+                        ZIndex: =24
+
+                    CheckboxCanvas4_8 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =258
+                        ZIndex: =25
+
+                    CheckboxCanvas4_9 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =290
+                        ZIndex: =26
+
+                    CheckboxCanvas4_10 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =323
+                        ZIndex: =27
+
+                    CheckboxCanvas4_11 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =409
+                        Y: =355
+                        ZIndex: =28
+
+                    CheckboxCanvas4_12 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =194
+                        ZIndex: =29
+
+                    CheckboxCanvas4_13 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =226
+                        ZIndex: =30
+
+                    CheckboxCanvas4_14 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =258
+                        ZIndex: =31
+
+                    CheckboxCanvas4_15 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =290
+                        ZIndex: =32
+
+                    CheckboxCanvas4_16 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =323
+                        ZIndex: =33
+
+                    CheckboxCanvas4_17 As Checkbox:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnCheck: =false
+                        OnUncheck: =false
+                        Width: =160
+                        X: =569
+                        Y: =355
+                        ZIndex: =34
+
             "'Right Container' As groupContainer.verticalAutoLayoutContainer":
                 DropShadow: =DropShadow.Regular
                 Fill: =RGBA(255, 255, 255, 1)
@@ -2033,4 +2283,23 @@
             X: =371
             Y: =267
             ZIndex: =8
+
+    ButtonCanvas9 As Button:
+        DisplayMode: =DisplayMode.Edit
+        Height: =32
+        OnSelect: =ClearCollect(ExportData, Filter (Master_Data,ID))
+        Text: ="Preview Sample"
+        Width: =133
+        X: =558
+        Y: =510
+        ZIndex: =9
+
+    ButtonCanvas9_1 As Button:
+        DisplayMode: =DisplayMode.Edit
+        Height: =32
+        Text: ="Export Table"
+        Width: =136
+        X: =713
+        Y: =510
+        ZIndex: =10
 
