--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1299,6 +1299,35 @@
                         Y: =355
                         ZIndex: =34
 
+                    ButtonCanvas9 As Button:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        OnSelect: =ClearCollect(ExportData, Filter (Master_Data,ID))
+                        Text: ="Preview Sample"
+                        Width: =133
+                        X: =532
+                        Y: =442
+                        ZIndex: =35
+
+                    ButtonCanvas9_1 As Button:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Text: ="Export Table"
+                        Width: =136
+                        X: =689
+                        Y: =442
+                        ZIndex: =36
+
+                    Icon22 As icon.CancelBadge:
+                        Height: =50
+                        Icon: =Icon.CancelBadge
+                        OnSelect: =Set(openExportFilters,false)
+                        Visible: =openExportFilters
+                        Width: =50
+                        X: =789
+                        Y: =46
+                        ZIndex: =37
+
             "'Right Container' As groupContainer.verticalAutoLayoutContainer":
                 DropShadow: =DropShadow.Regular
                 Fill: =RGBA(255, 255, 255, 1)
@@ -2283,23 +2312,4 @@
             X: =371
             Y: =267
             ZIndex: =8
-
-    ButtonCanvas9 As Button:
-        DisplayMode: =DisplayMode.Edit
-        Height: =32
-        OnSelect: =ClearCollect(ExportData, Filter (Master_Data,ID))
-        Text: ="Preview Sample"
-        Width: =133
-        X: =558
-        Y: =510
-        ZIndex: =9
-
-    ButtonCanvas9_1 As Button:
-        DisplayMode: =DisplayMode.Edit
-        Height: =32
-        Text: ="Export Table"
-        Width: =136
-        X: =713
-        Y: =510
-        ZIndex: =10
 
