--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1049,7 +1049,7 @@
                     Visible: =openExportFilters
                     ZIndex: =4
 
-                    Gallery1 As gallery.galleryVertical:
+                    ChkBoxGal As gallery.galleryVertical:
                         DelayItemLoading: =true
                         Height: =267
                         Items: =Organizations
@@ -1057,8 +1057,8 @@
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplateSize: =31
                         Width: =214
-                        X: =48
-                        Y: =165
+                        X: =34
+                        Y: =120
                         ZIndex: =1
 
                         CheckboxCanvas3 As Checkbox:
@@ -1081,31 +1081,8 @@
                         Weight: ='TextCanvas.Weight'.Semibold
                         Width: =361
                         X: =48
-                        Y: =46
-                        ZIndex: =5
-
-                    DataTable3 As dataTable.datatable:
-                        BorderStyle: =BorderStyle.Solid
-                        DisplayMode: =DisplayMode.Edit
-                        Fill: =RGBA(0, 0, 0, 0)
-                        Height: =254
-                        Items: =
-                        Width: =876
-                        X: =0
-                        Y: =474
-                        ZIndex: =6
-
-                    TextCanvas10_1 As Text:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =54
-                        Size: =20
-                        Text: |-
-                            ="Organization:"
-                        Weight: ='TextCanvas.Weight'.Semibold
-                        Width: =148
-                        X: =48
-                        Y: =126
-                        ZIndex: =15
+                        Y: =31
+                        ZIndex: =2
 
                     TextCanvas10_2 As Text:
                         DisplayMode: =DisplayMode.Edit
@@ -1116,8 +1093,8 @@
                         Weight: ='TextCanvas.Weight'.Semibold
                         Width: =148
                         X: =248
-                        Y: =126
-                        ZIndex: =16
+                        Y: =96
+                        ZIndex: =3
 
                     CheckboxCanvas4 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1127,7 +1104,7 @@
                         Width: =160
                         X: =249
                         Y: =194
-                        ZIndex: =17
+                        ZIndex: =4
 
                     CheckboxCanvas4_1 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1137,7 +1114,7 @@
                         Width: =160
                         X: =249
                         Y: =226
-                        ZIndex: =18
+                        ZIndex: =5
 
                     CheckboxCanvas4_2 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1147,7 +1124,7 @@
                         Width: =160
                         X: =249
                         Y: =258
-                        ZIndex: =19
+                        ZIndex: =6
 
                     CheckboxCanvas4_3 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1157,7 +1134,7 @@
                         Width: =160
                         X: =249
                         Y: =290
-                        ZIndex: =20
+                        ZIndex: =7
 
                     CheckboxCanvas4_4 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1167,7 +1144,7 @@
                         Width: =160
                         X: =249
                         Y: =323
-                        ZIndex: =21
+                        ZIndex: =8
 
                     CheckboxCanvas4_5 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1177,7 +1154,7 @@
                         Width: =160
                         X: =249
                         Y: =355
-                        ZIndex: =22
+                        ZIndex: =9
 
                     CheckboxCanvas4_6 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1187,7 +1164,7 @@
                         Width: =160
                         X: =409
                         Y: =194
-                        ZIndex: =23
+                        ZIndex: =10
 
                     CheckboxCanvas4_7 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1197,7 +1174,7 @@
                         Width: =160
                         X: =409
                         Y: =226
-                        ZIndex: =24
+                        ZIndex: =11
 
                     CheckboxCanvas4_8 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1207,7 +1184,7 @@
                         Width: =160
                         X: =409
                         Y: =258
-                        ZIndex: =25
+                        ZIndex: =12
 
                     CheckboxCanvas4_9 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1217,7 +1194,7 @@
                         Width: =160
                         X: =409
                         Y: =290
-                        ZIndex: =26
+                        ZIndex: =13
 
                     CheckboxCanvas4_10 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1227,7 +1204,7 @@
                         Width: =160
                         X: =409
                         Y: =323
-                        ZIndex: =27
+                        ZIndex: =14
 
                     CheckboxCanvas4_11 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1237,7 +1214,7 @@
                         Width: =160
                         X: =409
                         Y: =355
-                        ZIndex: =28
+                        ZIndex: =15
 
                     CheckboxCanvas4_12 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1247,7 +1224,7 @@
                         Width: =160
                         X: =569
                         Y: =194
-                        ZIndex: =29
+                        ZIndex: =16
 
                     CheckboxCanvas4_13 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1257,7 +1234,7 @@
                         Width: =160
                         X: =569
                         Y: =226
-                        ZIndex: =30
+                        ZIndex: =17
 
                     CheckboxCanvas4_14 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1267,7 +1244,7 @@
                         Width: =160
                         X: =569
                         Y: =258
-                        ZIndex: =31
+                        ZIndex: =18
 
                     CheckboxCanvas4_15 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1277,7 +1254,7 @@
                         Width: =160
                         X: =569
                         Y: =290
-                        ZIndex: =32
+                        ZIndex: =19
 
                     CheckboxCanvas4_16 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1287,7 +1264,7 @@
                         Width: =160
                         X: =569
                         Y: =323
-                        ZIndex: =33
+                        ZIndex: =20
 
                     CheckboxCanvas4_17 As Checkbox:
                         DisplayMode: =DisplayMode.Edit
@@ -1297,7 +1274,16 @@
                         Width: =160
                         X: =569
                         Y: =355
-                        ZIndex: =34
+                        ZIndex: =21
+
+                    ButtonCanvas9_1 As Button:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Text: ="Export Table"
+                        Width: =136
+                        X: =689
+                        Y: =442
+                        ZIndex: =22
 
                     ButtonCanvas9 As Button:
                         DisplayMode: =DisplayMode.Edit
@@ -1307,16 +1293,7 @@
                         Width: =133
                         X: =532
                         Y: =442
-                        ZIndex: =35
-
-                    ButtonCanvas9_1 As Button:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Text: ="Export Table"
-                        Width: =136
-                        X: =689
-                        Y: =442
-                        ZIndex: =36
+                        ZIndex: =23
 
                     Icon22 As icon.CancelBadge:
                         Height: =50
@@ -1326,7 +1303,26 @@
                         Width: =50
                         X: =789
                         Y: =46
-                        ZIndex: =37
+                        ZIndex: =24
+
+                    ExportViewerGal As groupContainer.manualLayoutContainer:
+                        Fill: =RGBA(230, 239, 242, 0.9)
+                        Height: =224
+                        Width: =876
+                        Y: =498
+                        ZIndex: =25
+
+                    TextCanvas10_1 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =54
+                        Size: =20
+                        Text: |-
+                            ="Organization:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =148
+                        X: =48
+                        Y: =96
+                        ZIndex: =26
 
             "'Right Container' As groupContainer.verticalAutoLayoutContainer":
                 DropShadow: =DropShadow.Regular
