--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -71,9 +71,12 @@
                 "ApprovalsAPFGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
                     DelayItemLoading: =true
                     Items: |-
-                        =If(CurrentUser.userRoles.Id > 1,
-                            Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym),
-                            'APF Uploads'
+                        =Sort(
+                            If(CurrentUser.userRoles.Id > 1,
+                                Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym),
+                                'APF Uploads'
+                            )
+                            , ID, SortOrder.Descending 
                         )
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
