--- a/SAO-EP/Src/New APF Form Screen.fx.yaml
+++ b/SAO-EP/Src/New APF Form Screen.fx.yaml
@@ -275,8 +275,9 @@
                 OnChange: |
                     =If(
                         Self.SelectedDate < Today(),
-                        Notify("Date cannot be before today");
-                        Reset(Self)
+                        Set(DateErrorMessageVisible, true);
+                        Reset(Self),
+                        Set(DateErrorMessageVisible, false)
                     );
                 PaddingBottom: =0
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
@@ -301,6 +302,17 @@
                 X: =30
                 Y: =DataCardValue5.Y + DataCardValue5.Height
                 ZIndex: =3
+
+            DateErrorMessage As Text:
+                DisplayMode: =DisplayMode.Edit
+                FontColor: =Color.Red
+                Height: =32
+                Text: ="Date cannot be before today"
+                Visible: =DateErrorMessageVisible
+                Width: =197
+                X: =170
+                Y: =11
+                ZIndex: =4
 
         "'Time of Activity_DataCard1' As typedDataCard.textualEditCard":
             BorderStyle: =BorderStyle.Solid
