--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -153,6 +153,7 @@
     "Reports",
     "Reports_1",
     "APF_Approvals",
-    "New APF Form Screen"
+    "New APF Form Screen",
+    "Exclude Date/s"
   ]
 }
