--- a/SAO-EP/Src/HomePage.fx.yaml
+++ b/SAO-EP/Src/HomePage.fx.yaml
@@ -129,6 +129,7 @@ HomePage As screen:
         CalendarComponent_3 As CalendarComponent_1:
             CalendarItems: =CalDeets
             SelectedDateFill: =RGBA(39, 113, 194, 1)
+            Visible: =true
             Y: =5
 
         BtnViewLoE As button:
@@ -226,4 +227,15 @@ HomePage As screen:
         X: =924
         Y: =117
         ZIndex: =8
+
+    BtnViewLoE_2 As button:
+        Fill: =RGBA(24, 32, 82, 1)
+        Height: =24
+        OnSelect: =Navigate('Exclude Date/s')
+        Size: =11
+        Text: ="Exclude Date/s"
+        Width: =163
+        X: =908
+        Y: =117
+        ZIndex: =9
 
